[MarkdownView] Prevent XSS

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pinia": "^2.0.33",
     "roboto-fontface": "*",
     "showdown": "^2.1.0",
+    "showdown-xss-filter": "^0.2.0",
     "upsilon.js": "^1.4.0",
     "uuid": "^9.0.0",
     "vite": "^3.1.0",
